--- a/Gizmo.Client.UI.Resources/Gizmo.Client.UI.Resources.csproj
+++ b/Gizmo.Client.UI.Resources/Gizmo.Client.UI.Resources.csproj
@@ -26,11 +26,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<EmbeddedResource Update="Properties\Resources.ru.resx">
-		  <Generator>ResXFileCodeGenerator </Generator>
+		<EmbeddedResource Update="Properties\Resources.ru-ru.resx">
+		  <Generator>PublicResXFileCodeGenerator</Generator>
 		</EmbeddedResource>
-		<EmbeddedResource Update="Properties\Resources.el.resx">
-			<Generator>ResXFileCodeGenerator </Generator>
+		<EmbeddedResource Update="Properties\Resources.el-gr.resx">
+			<Generator>PublicResXFileCodeGenerator</Generator>
 		</EmbeddedResource>
 	</ItemGroup>
 
