--- a/Gizmo.Client.UI.Resources/Gizmo.Client.UI.Resources.csproj
+++ b/Gizmo.Client.UI.Resources/Gizmo.Client.UI.Resources.csproj
@@ -26,11 +26,17 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <EmbeddedResource Update="Properties\Resources.da-dk.resx">
+	    <CustomToolNamespace></CustomToolNamespace>
+	    <Generator>PublicResXFileCodeGenerator</Generator>
+	  </EmbeddedResource>
 	  <EmbeddedResource Update="Properties\Resources.el-gr.resx">
 	    <Generator>PublicResXFileCodeGenerator</Generator>
+	    <CustomToolNamespace></CustomToolNamespace>
 	  </EmbeddedResource>
 	  <EmbeddedResource Update="Properties\Resources.ru-ru.resx">
 	    <Generator>PublicResXFileCodeGenerator</Generator>
+	    <CustomToolNamespace></CustomToolNamespace>
 	  </EmbeddedResource>
 	</ItemGroup>
 
